titlebarMacOS - initial commit

--- a/koala-config.json
+++ b/koala-config.json
@@ -9,6 +9,10 @@
 		{
 			"src": "titlebarWindows/src",
 			"dest": "titlebarWindows/dist"
+		},
+		{
+			"src": "titlebarMacOS/src",
+			"dest": "titlebarMacOS/dist"
 		}
 	],
 
