roleRevert - initial commit

--- a/koala-config.json
+++ b/koala-config.json
@@ -21,6 +21,10 @@
 		{
 			"src": "emojiNotoBlobs/src",
 			"dest": "emojiNotoBlobs/dist"
+		},
+		{
+			"src": "roleRevert/src",
+			"dest": "roleRevert/dist"
 		}
 	],
 
